--- a/DatabaseAnalizer/DatabaseAnaliser.csproj
+++ b/DatabaseAnalizer/DatabaseAnaliser.csproj
@@ -73,7 +73,9 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Web.Extensions" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -91,6 +93,13 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helper\TableArrow.cs" />
+    <Compile Include="Models\TableRelation.cs" />
+    <Compile Include="Views\TableArrow.cs" />
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\DBSettingsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -109,6 +118,10 @@
     <Compile Include="Models\Column.cs" />
     <Compile Include="Models\Database.cs" />
     <Compile Include="Controllers\Servers\MySqlServer.cs" />
+    <Compile Include="Models\Process\Attributes\Attribute.cs" />
+    <Compile Include="Models\Process\Event.cs" />
+    <Compile Include="Models\Process\Log.cs" />
+    <Compile Include="Models\Process\Trace.cs" />
     <Compile Include="Models\Table.cs" />
     <Compile Include="Controllers\Interfaces\IConnection.cs" />
     <Compile Include="Controllers\Interfaces\IServer.cs" />
