--- a/DatabaseAnalizer/DatabaseAnaliser.csproj
+++ b/DatabaseAnalizer/DatabaseAnaliser.csproj
@@ -93,12 +93,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helper\EnumHelper.cs" />
     <Compile Include="Helper\Enums\CompareValue.cs" />
     <Compile Include="Helper\Enums\DataTypes.cs" />
     <Compile Include="Helper\ListExtensions.cs" />
     <Compile Include="Helper\TableArrow.cs" />
     <Compile Include="Models\AnalizedTable.cs" />
     <Compile Include="Models\ProcessTypes.cs" />
+    <Compile Include="Models\RelationFromDb.cs" />
     <Compile Include="Models\TableRelation.cs" />
     <Compile Include="Views\Filter.xaml.cs">
       <DependentUpon>Filter.xaml</DependentUpon>
